--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-livekit-agents
 livekit-agents[openai,deepgram,cartesia,silero,turn_detector,google]~=1.0
+livekit==1.0.12
+livekit-api==1.0.5
 livekit-plugins-noise-cancellation
 mem0ai
 duckduckgo-search
 langchain_community
 requests
-python-dotenv
+python-dotenv==1.1.1
+pytz==2025.2
